# automake

./: LICENSE  README.md
cmake/: Readme.txt
cmake/02.function/: CMakeLists.txt  main.cpp
cmake/02.function/include/: CMakeLists.txt
cmake/02.function/src/: CMakeLists.txt  func.cpp  main.cpp
cmake/03.library/: CMakeLists.txt  run.sh
cmake/04.using_lib/: CMakeLists.txt  run.sh
cmake/05.unittest/: CMakeLists.txt  run.sh
cmake/05.unittest/include/: func.h
cmake/05.unittest/src/: CMakeLists.txt
cmake/05.unittest/unittest/: CMakeLists.txt  test.cpp
cmake/06.target_sources/: CMakeLists.txt
cmake/06.target_sources/include/: CMakeLists.txt
cmake/06.target_sources/src/: CMakeLists.txt
cmake/c/01.library/: CMakeLists.txt  run.sh
cmake/c/01.library/include/: func.h
cmake/c/01.library/src/: func.c
cmake/c/02.using_lib/: CMakeLists.txt
cmake/c/02.using_lib/app/: main.c
hello/: Makefile.am  ReadMe.txt  configure.ac  main.c
make_cmake/mk_cmake_make/my_project/: CMakeLists.txt  Makefile  cmake.mk  main.cpp
make_cmake/my_project/my_project/: CMakeLists.txt  Makefile  main.cpp
make_cmake/my_project/my_project/my_lib/: CMakeLists.txt  lib.cpp
make_cmake/my_project_include/my_project_include/: CMakeLists.txt  main.cpp
make_cmake/my_project_include/my_project_include/my_lib/: build-lib.cmake  lib.cpp  lib.h
